Fixed the excess spacing below the links in top bar and section tools

--- a/bottlecap/bottlecap/static/main.less
+++ b/bottlecap/bottlecap/static/main.less
@@ -698,6 +698,9 @@ body > footer {
     	    clear:none;
     	    margin: 0;
     	    padding: 0;
+    	    li a {
+    	        display: block;
+    	    }
     	}
         [data-quickpanel="quickpanel"] {
             display: inline;
@@ -1071,6 +1074,9 @@ body > footer {
         li {
             position: relative;
     	    float:left;
+    	    a {
+    	        display: block;
+    	    }
     	}
     	.dropdown li,
     	.quickpanel li {
